# python-supervisor-client

./: .gitignore  .pre-commit-config.yaml  .yamlint  Dockerfile.dev  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_tests.txt  setup.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yaml  dependabot.yml  labels.yml  release-drafter.yml  renovate.json
.github/workflows/: ci.yaml  release-drafter.yaml  release.yaml
aiohasupervisor/: __init__.py  addons.py  backups.py  client.py  const.py  discovery.py  exceptions.py  homeassistant.py  host.py  ingress.py  jobs.py  mounts.py  network.py  os.py  resolution.py  root.py  store.py  supervisor.py
aiohasupervisor/models/: __init__.py  addons.py  backups.py  base.py  discovery.py  homeassistant.py  host.py  ingress.py  jobs.py  mounts.py  network.py  os.py  resolution.py  root.py  supervisor.py
aiohasupervisor/utils/: __init__.py  aiohttp.py
aiosupervisor/: __init__.py  addons.py  client.py  const.py  root.py
aiosupervisor/models/: __init__.py  addons.py  base.py  root.py
examples/: __init__.py  connectivity_test.py
script/: devcontainer_bootstrap
tests/: __init__.py  conftest.py  const.py  ruff.toml  test_addons.py  test_backups.py  test_client.py  test_discovery.py  test_homeassistant.py  test_host.py  test_ingress.py  test_jobs.py  test_mounts.py  test_network.py  test_os.py  test_resolution.py  test_root.py  test_store.py  test_supervisor.py
tests/fixtures/: addon_stats.json  addons_config_validate.json  addons_info.json  addons_list.json  addons_options_config.json  backup_background.json  backup_foreground.json  backup_info.json  backup_info_location_attributes.json  backup_info_no_homeassistant.json  backup_info_protected_locations.json  backup_info_with_extra.json  backup_info_with_locations.json  backup_uploaded.json  backups_info.json  backups_list.json  backups_list_location_attributes.json  backups_list_protected_locations.json  create_session.json  discovery_get.json  discovery_list.json  discovery_set.json  homeassistant_info.json  homeassistant_stats.json  host_disk_usage.json  host_info.json  host_nvme_status.json  host_services.json  ingress_panels.json  jobs_get_job.json  jobs_get_job_extra.json  jobs_info.json  jobs_info_no_stage.json  mounts_info.json  network_access_points.json  network_info.json  network_interface_info.json  os_config_swap.json  os_datadisk_list.json  os_green_info.json  (+20 more)
